syntax = "proto3";

package engelsjk.faadb.dereg;
option go_package = "github.com/engelsjk/faadb/rpc/dereg;dereg";

// Dereg service.
service Dereg {
  // GetAircraft returns a Aircraft from a Query.
  rpc GetAircraft(Query) returns (Aircraft);
}

// Query for Aircraft (NNumber or Registrant).
message Query {
  string NNumber = 1;
  string SerialNumber = 2;
  string ModeSCodeHex = 3;
  string RegistrantName = 4; 
  string RegistrantStreet1 = 5;   
  string RegistrantState = 6;
  string AircraftModelCode = 7;
  string ApprovedOperationCode = 8;
  string AirworthinessClassificationCode = 9;
}

// A.
message A {
  string NNumber = 1;
  string SerialNumber = 2;
  string ManufacturerAircraftModelCode = 3;
  string ManufacturerEngineModelCode = 4;
  string ManufacturerYear = 5;
  string Status = 6;
  string RegistrantType = 7;
  string RegistrantName = 8;
  string RegistrantStreet1 = 9;
  string RegistrantStreet2 = 10;
  string RegistrantCity = 11;
  string RegistrantState = 12;
  string RegistrantZipCode = 13;
  string RegistrantRegion = 14;
  string RegistrantCounty = 15;
  string RegistrantCountry = 16;
  string RegistrantPhysicalAddress = 17;
  string RegistrantPhysicalAddress2 = 18;
  string RegistrantPhysicalCity = 19;
  string RegistrantPhysicalState = 20;
  string RegistrantPhysicalZipCode = 21;
  string RegistrantPhysicalCounty = 22;
  string RegistrantPhysicalCountry = 23;
  string CertificationAirworthinessClassificationCode = 24;
  string CertificationAirworthinessClassificationDescription = 25;
  string CertificationApprovedOperationCode = 26;
  string CertificationApprovedOperationDescription = 27;
  string AirworthinessDate = 28;
  string CancelDate = 29;
  string ExportCountry = 30;
  string LastActivityDate = 31;
  string CertificationIssueDate = 32;
  string OwnershipOtherName1 = 33;
  string OwnershipOtherName2 = 34;
  string OwnershipOtherName3 = 35;
  string OwnershipOtherName4 = 36;
  string OwnershipOtherName5 = 37;
  string KitManufacturerName = 38;
  string KitModelName = 39;
  string ModeSCode = 40;
  string ModeSCodeHex = 41;
}

message Aircraft {
  repeated A A = 1;
}